feat(template): set drawer mode=modal

--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -39,7 +39,7 @@ mwc-drawer {
 
 <!-- goes in body -->
 {% block contents %}
-<mwc-drawer hasHeader type="dismissible">
+<mwc-drawer hasHeader  type="modal">
     <span slot="title">{{ app_title }}</span>
     <div class="appMenu">
         <mwc-button disabled outlined="" label="Unvalidated Days (18)"></mwc-button>
