feat(template): start with drawer menu closed

--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -86,7 +86,7 @@ mwc-drawer {
       };
 
       drawer.shadow
-      drawer.open = true
+      drawer.open = false
     }
 </script>
 {% endblock %}
