feat(template): turn on drawer shadow

--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -85,7 +85,7 @@ mwc-drawer {
         for (let drawer of drawers){drawer.open=open}
       };
 
-      drawer.shadow
+      drawer.shadow = true
       drawer.open = false
     }
 </script>
