--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -42,8 +42,9 @@ mwc-drawer {
     <div class="appMenu">
         <mwc-button disabled outlined="" label="Unvalidated Days (18)"></mwc-button>
         <hr>
-        <div align="center"><p><h4>Select Day</h4></p>
-        {{ embed(roots.day_selector) }}</div>
+        <p><h4>Select Data</h4></p>
+        {{ embed(roots.rev_selector) }}
+        {{ embed(roots.day_selector) }}
         <hr>
         <div align="center"><p><h4>Select Plots</h4></p></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
