--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -10,6 +10,7 @@
 <script type="module" src="https://unpkg.com/@material/mwc-top-app-bar-fixed?module"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet" type="text/css">
 
 <style>
 body {
@@ -38,7 +39,11 @@ mwc-drawer {
 <!-- goes in body -->
 {% block contents %}
 <mwc-drawer hasHeader  type="modal">
-    <span slot="title">{{ app_title }}</span>
+    <span slot="title">
+        <a href="https://github.com/chime-experiment/bondia" target="_blank">
+            <i class="fab fa-github"></i></a>
+        {{ app_title }}
+    </span>
     <div class="appMenu">
         <mwc-button disabled outlined="" label="Unvalidated Days (18)"></mwc-button>
         <hr>
