feat(gui): describe displayed data in a title
Closes #33

--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -67,6 +67,7 @@ mwc-drawer {
             <mwc-icon-button icon="perm_identity" slot="actionItems" label="Login"></mwc-icon-button>
         </mwc-top-app-bar-fixed>
         <div class="appMain">
+            {{ embed(roots.data_description) }}
             {{ embed(roots.plot_delay_spectrum) }}
         </div>
     </div>
