--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -54,6 +54,7 @@ mwc-drawer {
         <hr>
         <div align="center"><p><h4>Select Plots</h4></p></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
+        <div>{{ embed(roots.toggle_ringmap) }}</div>
         <hr>
         <div align="center"><p><h4>Decision</h4></p></div>
         <mwc-button disabled raised="" label="Mark day as good" align="left"></mwc-button><br><br>
@@ -69,6 +70,7 @@ mwc-drawer {
         <div class="appMain">
             {{ embed(roots.data_description) }}
             {{ embed(roots.plot_delay_spectrum) }}
+            {{ embed(roots.plot_ringmap) }}
         </div>
     </div>
 </mwc-drawer>
