refactor(plot): move title to template var

--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -69,7 +69,9 @@ mwc-drawer {
         </mwc-top-app-bar-fixed>
         <div class="appMain">
             {{ embed(roots.data_description) }}
+            <h2>{{ title_delay_spectrum }}</h2>
             {{ embed(roots.plot_delay_spectrum) }}
+            <h2>{{ title_ringmap }}</h2>
             {{ embed(roots.plot_ringmap) }}
         </div>
     </div>
