--- a/bondia/templates/mdl_tabs.html
+++ b/bondia/templates/mdl_tabs.html
@@ -1,4 +1,4 @@
-<!-- Always shows a header, even in smaller screens. -->
+<!-- Simple header with fixed tabs. -->
 {% extends base %}
 
 <!-- goes in head -->
@@ -12,25 +12,25 @@
 {% endblock %}
 
 {% block contents %}
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+            mdl-layout--fixed-tabs">
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
-      <!-- Title -->
       <span class="mdl-layout-title">{{ subtitle }}</span>
-      <!-- Add spacer, to align navigation to the right -->
-      <div class="mdl-layout-spacer"></div>
-      <!-- Navigation. We hide it in small screens. -->
-      <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="/logout">Logout</a>
-      </nav>
+    </div>
+
+    <!-- Tabs -->
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+      <a href="#delayspectrum" class="mdl-layout__tab is-active">Delay Spectrum</a>
+      <a href="#ringmap" class="mdl-layout__tab">Ringmap</a>
+      <a href="#sensitivity" class="mdl-layout__tab">Sensitivity</a>
     </div>
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title"><a href="https://github.com/chime-experiment/bondia" target="_blank">
             <i class="fab fa-github"></i></a>  {{ app_title }}</span>
-    <nav class="mdl-navigation">
       <div align="center"><p>User: <i>{{ username }}</i></p></div>
-      <hr>
+        <hr>
         <div align="center"><h4>Select Data</h4></div>
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
@@ -49,21 +49,26 @@
         <button class="mdl-button mdl-js-button mdl-button--raised" disabled>
             I don't know
         </button>
-    </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content">
-      {{ embed(roots.data_description) }}
-      <h4>{{ title_delay_spectrum }}</h4>
-      {{ embed(roots.plot_delay_spectrum) }}
-      <h4>{{ title_ringmap }}</h4>
-      {{ embed(roots.plot_ringmap) }}
-    </div>
-
-    <!-- List unused components here -->
-    <div style="display: none;">
-    {{ embed(roots.data_description1) }}{{ embed(roots.data_description2) }}
-    </div>
+    <section class="mdl-layout__tab-panel is-active" id="delayspectrum">
+      <div class="page-content">
+          {{ embed(roots.data_description) }}
+          {{ embed(roots.plot_delay_spectrum) }}
+      </div>
+    </section>
+    <section class="mdl-layout__tab-panel" id="ringmap">
+      <div class="page-content">
+          {{ embed(roots.data_description1) }}
+          {{ embed(roots.plot_ringmap) }}
+      </div>
+    </section>
+    <section class="mdl-layout__tab-panel" id="sensitivity">
+      <div class="page-content">
+          {{ embed(roots.data_description2) }}
+          <p>Nothing here yet...</p>
+      </div>
+    </section>
   </main>
 </div>
 {% endblock %}
