--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -31,25 +31,22 @@
     <nav class="mdl-navigation">
       <div align="center"><p>User: <i>{{ username }}</i></p></div>
       <hr>
-        <div align="center"><h4>Select Data</h4></div>
+      <div  align="center">
+        <div><h4>Select Data</h4></div>
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
         <hr>
-        <div align="center"><h4>Select Plots</h4></div>
+        <div><h4>Select Plots</h4></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
         <div>{{ embed(roots.toggle_ringmap) }}</div>
         <div>{{ embed(roots.toggle_sensitivity) }}</div>
         <hr>
-        <div align="center"><h4>Decision</h4></div>
-        <button class="mdl-button mdl-js-button mdl-button--raised" disabled>
-            Mark day as good
-        </button>
-        <button class="mdl-button mdl-js-button mdl-button--raised" disabled>
-            Mark day as bad
-        </button>
-        <button class="mdl-button mdl-js-button mdl-button--raised" disabled>
-            I don't know
-        </button>
+        <div>{{ embed(roots.opinion_header) }}</div>
+        <div>{{ embed(roots.opinion_good) }}</div>
+        <div>{{ embed(roots.opinion_bad) }}</div>
+        <div>{{ embed(roots.opinion_unsure) }}</div>
+        <div>{{ embed(roots.opinion_warning) }}</div>
+      </div>
     </nav>
   </div>
   <main class="mdl-layout__content">
