--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -20,8 +20,8 @@
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
-      <nav class="mdl-navigation mdl-layout--large-screen-only">
-        <a class="mdl-navigation__link" href="/logout">Logout</a>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="/bondia/logout">Logout <i>{{ username }}</i></a>
       </nav>
     </div>
   </header>
@@ -29,8 +29,6 @@
     <span class="mdl-layout-title"><a href="https://github.com/chime-experiment/bondia" target="_blank">
             <i class="fab fa-github"></i></a>  {{ app_title }}</span>
     <nav class="mdl-navigation">
-      <div align="center"><p>User: <i>{{ username }}</i></p></div>
-      <hr>
       <div  align="center">
         <div><h4>Select Data</h4></div>
         {{ embed(roots.rev_selector) }}
