--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -48,7 +48,7 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content">
+    <div class="page-content" align="center">
       {{ embed(roots.data_description) }}
       <h4>{{ title_delay_spectrum }}</h4>
       {{ embed(roots.plot_delay_spectrum) }}
