feat(gui): add indicator for when page loading
Should be replaced with this when available: https://github.com/holoviz/panel/pull/1730

Closes #65

--- a/bondia/templates/material.html
+++ b/bondia/templates/material.html
@@ -16,6 +16,7 @@
       <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
       <span class="mdc-top-app-bar__title">{{ subtitle }}</span>
       <button class="mdc-icon-button material-icons">account_circle</button>
+      {{ embed(roots.busy_indicator) }}
     </section>
   </div>
 </header>
