--- a/bondia/templates/mdl_tabs.html
+++ b/bondia/templates/mdl_tabs.html
@@ -17,6 +17,7 @@
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
       <span class="mdl-layout-title">{{ subtitle }}</span>
+      {{ embed(roots.busy_indicator) }}
     </div>
 
     <!-- Tabs -->
