--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -22,6 +22,7 @@
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/bondia/logout">Logout <i>{{ username }}</i></a>
+        {{ embed(roots.busy_indicator) }}
       </nav>
     </div>
   </header>
