feat(gui): add option to hide days with opinion
Closes #65

--- a/bondia/templates/material.html
+++ b/bondia/templates/material.html
@@ -32,6 +32,7 @@
         <hr>
         <div align="center"><p><h4>Select Day</h4></p>
         {{ embed(roots.day_selector) | indent(8) }}</div>
+        {{ embed(roots.day_filter_opinion_checkbox) }}
         <hr>
         <div>{{ embed(roots.plot_selector) | indent(8) }}</div>
         <hr>
