--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -34,6 +34,7 @@
         <div><h4>Select Data</h4></div>
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
+        {{ embed(roots.day_filter_opinion_checkbox) }}
         <hr>
         <div><h4>Select Plots</h4></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
