--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -56,6 +56,7 @@ mwc-drawer {
         <p><h4>Select Data</h4></p>
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
+        {{ embed(roots.day_filter_opinion_checkbox) }}
         <hr>
         <div align="center"><p><h4>Select Plots</h4></p></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
