--- a/bondia/templates/mdl_tabs.html
+++ b/bondia/templates/mdl_tabs.html
@@ -35,6 +35,7 @@
         <div align="center"><h4>Select Data</h4></div>
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
+        {{ embed(roots.day_filter_opinion_checkbox) }}
         <hr>
         <div align="center"><h4>Select Plots</h4></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
