feat(gui): add info tables
Closes #84 and #85

--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -59,6 +59,8 @@
       {{ embed(roots.plot_sensitivity) }}
       <h4>{{ title_ringmap }}</h4>
       {{ embed(roots.plot_ringmap) }}
+      {{ embed(roots.day_stats) }}
+
     </div>
 
     <!-- List unused components here -->
