--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -86,6 +86,7 @@ mwc-drawer {
             {{ embed(roots.plot_sensitivity) }}
             <h2>{{ title_ringmap }}</h2>
             {{ embed(roots.plot_ringmap) }}
+            {{ embed(roots.day_stats) }}
         </div>
     </div>
 </mwc-drawer>
