--- a/bondia/templates/mdl_tabs.html
+++ b/bondia/templates/mdl_tabs.html
@@ -54,18 +54,22 @@
       <div class="page-content">
           {{ embed(roots.data_description) }}
           {{ embed(roots.plot_delay_spectrum) }}
+          {{ embed(roots.day_stats) }}
+
       </div>
     </section>
     <section class="mdl-layout__tab-panel" id="sensitivity">
       <div class="page-content">
           {{ embed(roots.data_description2) }}
           {{ embed(roots.plot_sensitivity) }}
+          {{ embed(roots.day_stats) }}
       </div>
     </section>
     <section class="mdl-layout__tab-panel" id="ringmap">
       <div class="page-content">
           {{ embed(roots.data_description1) }}
           {{ embed(roots.plot_ringmap) }}
+          {{ embed(roots.day_stats) }}
       </div>
     </section>
   </main>
