fix(auth): logout
Closes #87

--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -21,7 +21,7 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="/bondia/logout">Logout <i>{{ username }}</i></a>
+        <a class="mdl-navigation__link" href="{{ root_url }}/logout">Logout <i>{{ username }}</i></a>
         {{ embed(roots.busy_indicator) }}
       </nav>
     </div>
