feat(gui): add option: sort days by number of opinions

--- a/bondia/templates/material.html
+++ b/bondia/templates/material.html
@@ -33,6 +33,7 @@
         <div align="center"><p><h4>Select Day</h4></p>
         {{ embed(roots.day_selector) | indent(8) }}</div>
         {{ embed(roots.day_filter_opinion_checkbox) }}
+        {{ embed(roots.day_sort_checkbox) }}
         <hr>
         <div>{{ embed(roots.plot_selector) | indent(8) }}</div>
         <hr>
