--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -35,6 +35,7 @@
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
         {{ embed(roots.day_filter_opinion_checkbox) }}
+        {{ embed(roots.day_sort_checkbox) }}
         <hr>
         <div><h4>Select Plots</h4></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
