--- a/bondia/templates/mwc.html
+++ b/bondia/templates/mwc.html
@@ -57,6 +57,7 @@ mwc-drawer {
         {{ embed(roots.rev_selector) }}
         {{ embed(roots.day_selector) }}
         {{ embed(roots.day_filter_opinion_checkbox) }}
+        {{ embed(roots.day_sort_checkbox) }}
         <hr>
         <div align="center"><p><h4>Select Plots</h4></p></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
