--- a/bondia/templates/mdl.html
+++ b/bondia/templates/mdl.html
@@ -39,6 +39,7 @@
         <hr>
         <div><h4>Select Plots</h4></div>
         <div>{{ embed(roots.toggle_delay_spectrum) }}</div>
+        <div>{{ embed(roots.toggle_delay_spectrum_hpf) }}</div>
         <div>{{ embed(roots.toggle_sensitivity) }}</div>
         <div>{{ embed(roots.toggle_ringmap) }}</div>
         <hr>
@@ -56,6 +57,8 @@
       {{ embed(roots.data_description) }}
       <h4>{{ title_delay_spectrum }}</h4>
       {{ embed(roots.plot_delay_spectrum) }}
+      <h4>{{ title_delay_spectrum_hpf }}</h4>
+      {{ embed(roots.plot_delay_spectrum_hpf) }}
       <h4>{{ title_sensitivity }}</h4>
       {{ embed(roots.plot_sensitivity) }}
       <h4>{{ title_ringmap }}</h4>
